# Prism-Test

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  BENCHMARKING.md  CLAUDE.md  CONTRIBUTING.md  EVAL_HARNESS.md  LICENSE  Progress.md  README.md  evaluate_config.yaml  long_context_baseline_questions.md  nemotron_ruler16k_kv_report.md  pyproject.toml  requirements-eval.txt  requirements.txt  run_eval.py
.claude/: settings.json
.github/workflows/: pre-commit.yml  tests.yml
baselines/: __init__.py  reattention_topk.py
datasets/Prism-Data/128K/: qa_5.jsonl  qa_6.jsonl  qa_7.jsonl  qa_8.jsonl
datasets/Prism-Data/250K/: qa_4.jsonl
eval_harness/: __init__.py  cli.py  config.py  hf_adapter.py  long_context.py  rag_adapter.py  research_adapter.py  research_pipeline.py  runner.py  vllm_adapter.py
eval_harness/attention/: __init__.py  plugins.py
eval_harness/attention_methods/: __init__.py  _method_base.py  _method_registry.py  base.py  dca.py  reattention.py  reattention_exact.py  registry.py
eval_harness/benchmarks/: __init__.py  aime.py  aime2024.py  aime2025.py  base.py  common.py  gsm_infinite_128k.py  infinite_bench.py  loft.py  longbench.py  longbench_metrics.py  longbenchv2.py  loogle.py  mock_benchmark.py  prism1m.py  registry.py  ruler.py  ruler128k.py  ruler16k.py  ruler32k.py  ruler64k.py  zero_scrolls.py
eval_harness/kernels/: __init__.py  bitonic_merge_wrapper.py  dca_flash.py  einsum_topk.py
eval_harness/kv_compression/: __init__.py  attention_patch.py  base.py  cache_adapter.py  registry.py
eval_harness/kv_compression/compressors/: __init__.py  adakv_sketch.py  balancekv_sketch.py  block_sketch.py  chunk_sketch.py  chunkkv_sketch.py  compactor_sketch.py  composed_sketch.py  criticalkv_sketch.py  cur_sketch.py  decoding_sketch.py  dms_sketch.py  duo_attention_sketch.py  expected_attention_sketch.py  expected_attention_stats_sketch.py  fastkvzip_sketch.py  finch_sketch.py  h2o_sketch.py  key_rerotation_sketch.py  keydiff_sketch.py  knorm_sketch.py  kvzap_sketch.py  kvzip_sketch.py  lagkv_sketch.py  leverage_sketch.py  non_causal_attention_sketch.py  observed_attention_sketch.py  per_layer_compression_sketch.py  prefill_decoding_sketch.py  pyramidkv_sketch.py  qfilter_sketch.py  random_sketch.py  reattention_sketch.py  ridge_sketch.py  simlayerkv_sketch.py  snapkv_sketch.py  streaming_llm_sketch.py  think_sketch.py  tova_sketch.py
eval_harness/mlp_methods/: __init__.py
eval_harness/positional_methods/: __init__.py  base.py  linear_pi.py  ntk.py  registry.py  yarn.py
eval_harness/prefill_methods/: __init__.py  base.py  dca.py  reattention.py  reattention_exact.py  registry.py
eval_harness/rag/: base.py  one_pass_rag.py
eval_harness/sketch/: __init__.py  attention_patch.py  cache_adapter.py  pipeline.py  utils.py
eval_harness/sketch/sketches/: __init__.py  adakv_sketch.py  base_sketch.py  (+37 more)
eval_harness/tests/: disabled_test_reattention_reposition.py.bak  test_attention_methods_dca_parity.py  test_attention_plugins.py  test_cache_adapter.py  test_chunked_prefill.py  test_compression_schedule.py  test_dca_reference_oracle.py  test_hf_adapter.py  test_hybrid_layer_detection.py  test_identity_rope_equivalence.py  test_loft.py  test_long_context.py  test_longbench_scoring.py  test_nemotron_h_kv_compression.py  test_positional_methods.py  test_prefill_integration.py  test_prefill_methods.py  test_qwen35_gated_qproj.py  test_qwen35_key_rerotate.py  test_qwen35_partial_rope.py  test_qwen35_ridge_degate.py  test_reattention_exact.py  test_reattention_faithful_oracle.py  test_research_adapter.py  test_research_hf_equivalence.py  test_ruler_loader_split.py  test_sketch_adakv.py  test_sketch_balancekv.py  test_sketch_block.py  test_sketch_chunk.py  test_sketch_chunkkv.py  test_sketch_compactor.py  test_sketch_composed.py  test_sketch_criticalkv.py  test_sketch_cur.py  test_sketch_dms.py  test_sketch_duo_attention.py  test_sketch_expected_attention.py  test_sketch_expected_attention_stats.py  test_sketch_fastkvzip.py  (+26 more)
evaluate/: evaluate_common.yaml  evaluate_dca.yaml  evaluate_hf.yaml  evaluate_kv.yaml  evaluate_kv_ministral.yaml  evaluate_ministral_flash_smoke.yaml  evaluate_ministral_smoke.yaml  evaluate_nemotron_kv.yaml  evaluate_positional.yaml  evaluate_reattention.yaml  evaluate_vllm.yaml
rag/: ABCs.py  README.md  basic_rag.py  benchmark.py  niah.py  requirements.txt
scripts/: compare_longbench_to_papers.py  longbench_sweep.py  longbench_to_xlsx.py
scripts/slurm/: longbench_sweep.sbatch
(+20 files in other folders)
