[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-test"
version = "0.1.0"
description = "Long-context inference evaluation framework for research on extending transformer context windows beyond their training limits."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aysinghal", email = "aysingha@terpmail.umd.edu" },
]
# TODO: pick a license (MIT / Apache-2.0 / BSD-3-Clause) and add a LICENSE file.
# license = { text = "MIT" }

# Loose constraints so the harness installs alongside users' own model code.
# Upper bounds are set where a known major bump would break the harness.
dependencies = [
    # Core inference
    "vllm>=0.5.5,<1.0",
    "torch>=2.1,<3",
    "transformers>=4.45,<6",

    # Data / scoring
    "datasets>=2.20",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pyarrow",

    # Config / CLI / IO
    "pyyaml>=6.0",
    "tqdm>=4.66",

    # Embeddings
    "sentence-transformers",

    # Build deps (required by vllm / flash-attn from source)
    "ninja",
    "setuptools",

    # RAG backend
    "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-lancedb",
    "llama-index-llms-ollama",
    "lancedb",
]

[project.optional-dependencies]
# Optional perf extras — not installed by default because flash-attn requires
# CUDA toolchain at install time.
flash = ["flash-attn"]

[project.scripts]
prism-eval = "eval_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["eval_harness"]
