[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-test"
version = "0.1.0"
description = "Long-context inference evaluation framework for research on extending transformer context windows beyond their training limits."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aysinghal", email = "aysingha@terpmail.umd.edu" },
]
# TODO: pick a license (MIT / Apache-2.0 / BSD-3-Clause) and add a LICENSE file.
# license = { text = "MIT" }

# Loose constraints so the harness installs alongside users' own model code.
# Upper bounds are set where a known major bump would break the harness.
dependencies = [
    # Core inference
    "vllm>=0.5.5,<1.0",
    "torch>=2.1,<3",
    # >=4.49: the pipeline passes `logits_to_keep` (renamed from
    # `num_logits_to_keep` in 4.49; earlier versions only accept the old name).
    "transformers>=4.49,<6",
    # Mistral-family tokenizer (Mistral, Ministral, Mistral3, Pixtral, Voxtral).
    # AutoTokenizer auto-routes Mistral model_ids to MistralCommonBackend when
    # this is installed; without it, it silently falls back to a generic backend
    # and chat-template formatting will be wrong.
    "mistral-common>=1.8.6",
    # FP8-quantized checkpoints (Ministral-3 ships FP8 by default) require the
    # transformers `finegrained_fp8` quantizer, which imports accelerate for
    # device-map dispatch and dequantization.
    "accelerate>=0.30",

    # Data / scoring
    "datasets>=2.20",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pyarrow",
    # LongBench task-specific metrics: ROUGE-L (summarization) and jieba
    # (Chinese segmentation). Pure-Python, imported lazily by the scorer.
    "rouge>=1.0",
    "jieba>=0.42",
    # LongBench code tasks (lcc, repobench-p) score via fuzzywuzzy.fuzz.ratio.
    # python-Levenshtein wires up fuzzywuzzy's fast C backend so our numbers
    # match the path most published LongBench results were measured on (with
    # only the pure-Python difflib fallback, lcc/repobench-p drift ~1-2 pts).
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.20",

    # Config / CLI / IO
    "pyyaml>=6.0",
    "tqdm>=4.66",
    # Writing the LongBench result sheet (scripts/longbench_to_xlsx.py).
    "openpyxl>=3.1",

    # Embeddings
    "sentence-transformers",

    # Build deps (required by vllm / flash-attn from source)
    "ninja",
    "setuptools",

    # RAG backend
    "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-lancedb",
    "llama-index-llms-ollama",
    "lancedb",
]

[project.optional-dependencies]
# Optional perf extras — not installed by default because flash-attn requires
# CUDA toolchain at install time.
flash = ["flash-attn"]

[project.scripts]
prism-eval = "eval_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["eval_harness"]
